[package]
name = "haplotyper"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = {path = "../definitions"}
log = "0.4.17"
env_logger = "0.9.0"
bio_utils = {git = "https://github.com/ban-m/bio_utils.git", rev = "68a34b23b5a834d7322b7de184319726c17b35cd"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.5.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.3"
nalgebra  = "0.31.0"
histgram_viz = {git = "https://github.com/ban-m/histgram_viz", branch = "master"}
gfa = {git = "https://github.com/ban-m/gfa_rust.git", branch = "master"}
edlib_sys = {git = "https://github.com/ban-m/edlib-sys.git", branch = "master"}
bytecount = "0.6.2"
kiley = {git = "https://github.com/ban-m/kiley.git", rev = "8f8296d5b699c1f989da674d18da4a6464b8f08e"}
# kiley = {path = "../../kiley"}
