[package]
name = "haplotyper"
version = "0.3.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
rayon = "1.10.0"
nalgebra  = "0.33.0"
bytecount = "0.6.8"
bio_utils = {git = "https://github.com/ban-m/bio_utils.git", branch = "master"}
histgram_viz = {git = "https://github.com/ban-m/histgram_viz", branch = "master"}
gfa = {git = "https://github.com/ban-m/gfa_rust.git", branch = "master"}
edlib_sys = {git = "https://github.com/ban-m/edlib-sys.git", branch = "master"}
kiley = {git = "https://github.com/ban-m/kiley.git", branch = "main", version = "0.3.0"}
definitions = {path = "../definitions"}
