[package]
name = "hla_cli"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
definitions = {path = "../definitions"}
log = "*"
env_logger = "*"
serde_json = "*"
bio_utils = {git = "https://github.com/ban-m/bio_utils.git", branch = "master"}
haplotyper = {path = "../haplotyper"}
rayon = "*"
gfa = {git = "https://github.com/ban-m/gfa_rust.git", branch = "master"}