[package]
name = "hla_cli"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
definitions = {path = "../definitions"}
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0"
bio_utils = {git = "https://github.com/ban-m/bio_utils.git", branch = "master"}
haplotyper = {path = "../haplotyper"}
rayon = "1.5.3"
gfa = {git = "https://github.com/ban-m/gfa_rust.git", branch = "master"}
