[package]
name = "sandbox"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poa_hmm = {path = "../partial_order_alignment", features = ["poa_simd"]}
rand = "*"
rand_xoshiro = "*"
rand_distr = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
definitions = {path = "../definitions"}
histgram_viz = {path = "../histgram_viz"}
haplotyper = {path = "../haplotyper"}
de_bruijn_graph = {path = "../de_bruijn_graph"}
env_logger = "*"
log = "*"
gfa = {path = "../gfa_rust"}
rayon = "*"
bio_utils = {path = "../bio_utils"}