[package]
name = "sandbox"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poa_hmm = {version = "0.2.0", git = "https://github.com/ban-m/partial_order_alignment.git", branch = "master", features = ["poa_simd"]}
# dirichlet_fit = {version = "0.1.0", git = "https://github.com/ban-m/dirichlet_fit.git"}
dirichlet_fit = {path = "../../dirichlet_fit"}
rand = "*"
rand_xoshiro = "*"
rand_distr = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
definitions = {path = "../definitions"}
histgram_viz = {git = "https://github.com/ban-m/histgram_viz", branch = "master"}
haplotyper = {path = "../haplotyper"}
de_bruijn_graph = {git = "https://github.com/ban-m/de_bruijn_graph.git", branch = "hla_module"}
env_logger = "*"
log = "*"
gfa = {git = "https://github.com/ban-m/gfa_rust.git", branch = "master"}
rayon = "*"
bio_utils = {git = "https://github.com/ban-m/bio_utils.git", branch = "master"}
nalgebra = "*"
edlib_sys = {git = "https://github.com/ban-m/edlib-sys.git", branch = "master"}
kiley = {path = "../../kiley"}
